style: Fix navigation bar overlapping with sections upon scrolling

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,11 @@ p {
 }
 
 /* ---- Layout Rules ---- */
+
+html {
+  scroll-padding-top: 200px;
+}
+
 body {
   display: flex;
   flex-direction: column;
